--- a/css/harry.css
+++ b/css/harry.css
@@ -46,15 +46,21 @@ html {
     font-size: 35px;
     font-weight: bold;
 }
-.textoFotos{
+
+.textoFotos {
     padding: 15px;
     margin: 15px;
 }
 
 .textoMediano {
-    font-size: 20px;
+    font-size: 25px;
+    font-weight: bold;
 }
-
+/* .textoCentradoRow{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}  */
 .videoPortada {
     border-radius: 15px;
 }
@@ -116,6 +122,13 @@ html {
     opacity: 0.7;
 }
 
+.imgFotos {
+    height: 300px;
+    width: 300px;
+    padding: 10px;
+    margin: 10px;
+}
+
 .fontComun {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
@@ -140,10 +153,6 @@ html {
     flex-direction: column;
     justify-content: end;
 }
-
-/* .divModel2--text{
-     width: 250px;
- } */
 .divModelImg {
     display: flex;
     justify-content: center;
@@ -180,6 +189,76 @@ html {
         "pie pie pie";
     grid-template-columns: repeat(1fr);
     grid-template-rows: repeat(1fr);
+}
+
+.padreFotos {
+    display: grid;
+    grid-template-areas:
+        "navegacion	navegacion navegacion"
+        "encabezadoF1 encabezadoF1 encabezadoF1"
+        "encabezadoF2 encabezadoF2 encabezadoF2"
+        "txPic1 . pic1"
+        "pic2 .	txPic2"
+        "encabezadoF3 encabezadoF3 encabezadoF3"
+        "txPic3 . pic3"
+        "pic4 . txPic4"
+        "encabezadoF4 encabezadoF4 encabezadoF4"
+        "txPic5 . pic5"
+        "pic6 .	txPic6"
+        "pie pie pie";
+    grid-template-columns: 48% 2% 48%;
+    grid-template-rows: 12fr;
+}
+.encabezadoF1 {
+    grid-area: encabezadoF1;
+}
+.encabezadoF2{
+    grid-area: encabezadoF2;
+}
+.encabezadoF3{
+    grid-area: encabezadoF3;
+}
+.encabezadoF4{
+    grid-area: encabezadoF4;
+}
+.txPic1{
+    grid-area: txPic1;
+}
+.pic1{
+    text-align: right;
+    grid-area: pic1;
+}
+.txPic2{
+    grid-area: txPic2;
+}
+.pic2{
+    grid-area: pic2;
+}
+.txPic3{
+    grid-area: txPic3;
+}
+.pic3{
+    grid-area: pic3;
+    text-align: right;
+}
+.txPic4{
+    grid-area: txPic4;
+}
+.pic4{
+    grid-area: pic4;
+}
+.txPic5{
+    grid-area: txPic5;
+}
+.pic5{
+    text-align: right;
+    grid-area: pic5;
+}
+.txPic6{
+    grid-area: txPic6;
+}
+.pic6{
+    grid-area: pic6;
 }
 
 /* @media (min-width:361px) and (max-width:768px) {
