--- a/css/harry.css
+++ b/css/harry.css
@@ -24,6 +24,12 @@ html {
     font-size: 15px;
 }
 
+.textoSilver1 {
+    /* margin: 10px; */
+    color: #9d9d9d;
+    font-size: 10px;
+}
+
 .textoSilver--align {
     text-align: justify;
 }
@@ -31,6 +37,13 @@ html {
 .textoSilverContacto {
     color: #9d9d9d;
     font-size: 15px;
+    font-weight: bolder;
+}
+
+.textoSilverContacto1 {
+    color: #9d9d9d;
+    font-size: 13px;
+    font-weight: bolder;
 }
 
 .textoClasico {
@@ -56,6 +69,12 @@ html {
     font-size: 25px;
     font-weight: bold;
 }
+
+.textoCentro {
+    display: flex;
+    align-items: center;
+}
+
 /* .textoCentradoRow{
     display: flex;
     flex-direction: row;
@@ -123,16 +142,19 @@ html {
 }
 
 .imgFotos {
-    height: fit-content;
-    width: fit-content;
-    padding: 10px;
-    margin: 10px;
+    height: 500px;
+    width: 500px;
+    /* padding: 0px 0px 0px 100px; */
+    /* margin: 10px;  */
 }
+
 .imgFotos1 {
     height: fit-content;
     width: fit-content;
     padding: 10px;
 }
+
+
 
 .fontComun {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
@@ -158,6 +180,7 @@ html {
     flex-direction: column;
     justify-content: end;
 }
+
 .divModelImg {
     display: flex;
     justify-content: center;
@@ -168,14 +191,21 @@ html {
 }
 
 .footer {
-    margin: 15px;
-    padding: 15px;
+    /* margin: 15px;
+    padding: 15px; */
     text-align: center;
     opacity: 0.8;
+    margin-top: auto;
+    width: 100%;
+    height: 60px;
+    /* Height of the footer */
+    background: rgb(5, 48, 35);
 }
 
 .form1 {
     display: flexbox;
+    flex-direction: column;
+    margin: 15px 0px 0px 0px;
 }
 
 .form1>form {
@@ -190,7 +220,8 @@ html {
         "encabezado encabezado encabezado"
         "parrafo1 parrafo1 parrafo1"
         "sec1 . sec2"
-        "vid vid vid"
+        ". car ."
+        ". vid ."
         "pie pie pie";
     grid-template-columns: repeat(1fr);
     grid-template-rows: repeat(1fr);
@@ -214,55 +245,71 @@ html {
     grid-template-columns: 48% 2% 48%;
     grid-template-rows: 12fr;
 }
+
 .encabezadoF1 {
     grid-area: encabezadoF1;
 }
-.encabezadoF2{
+
+.encabezadoF2 {
     grid-area: encabezadoF2;
 }
-.encabezadoF3{
+
+.encabezadoF3 {
     grid-area: encabezadoF3;
 }
-.encabezadoF4{
+
+.encabezadoF4 {
     grid-area: encabezadoF4;
 }
-.txPic1{
+
+.txPic1 {
     grid-area: txPic1;
 }
-.pic1{
+
+.pic1 {
     text-align: right;
     grid-area: pic1;
 }
-.txPic2{
+
+.txPic2 {
     grid-area: txPic2;
 }
-.pic2{
+
+.pic2 {
     grid-area: pic2;
 }
-.txPic3{
+
+.txPic3 {
     grid-area: txPic3;
 }
-.pic3{
+
+.pic3 {
     grid-area: pic3;
     text-align: right;
 }
-.txPic4{
+
+.txPic4 {
     grid-area: txPic4;
 }
-.pic4{
+
+.pic4 {
     grid-area: pic4;
 }
-.txPic5{
+
+.txPic5 {
     grid-area: txPic5;
 }
-.pic5{
+
+.pic5 {
     text-align: right;
     grid-area: pic5;
 }
-.txPic6{
+
+.txPic6 {
     grid-area: txPic6;
 }
-.pic6{
+
+.pic6 {
     grid-area: pic6;
 }
 
@@ -290,6 +337,10 @@ html {
 
 .parrafo1 {
     grid-area: parrafo1;
+}
+
+.car {
+    grid-area: car;
 }
 
 .seccion1 {
@@ -338,6 +389,10 @@ html {
     justify-content: center;
     flex-wrap: wrap;
     margin: auto;
+}
+
+.divModelFormBtn {
+    padding: 0px 0px 10px 0px;
 }
 
 .divModelForm {
