se agregó SCSS al HTML Lore

--- a/css/harry.css
+++ b/css/harry.css
@@ -227,7 +227,8 @@ html {
     grid-template-rows: repeat(1fr);
 }
 
-.padreFotos {
+.padreFotos 
+{
     display: grid;
     grid-template-areas:
         "navegacion	navegacion navegacion"
