--- a/scss/pages/_lore.scss
+++ b/scss/pages/_lore.scss
@@ -11,7 +11,7 @@
     opacity: 0.7;
 }
 
-.navBar {
+.navBar{
     background-color: #062521;
     opacity: 0.8;
     text-align: center;
@@ -19,57 +19,46 @@
     font-size: 15px;
     top: 0;
     width: 100%;
+        li{
+            display: inline-block;
+            padding: 10px 20px;
+                &:hover{
+                    background-color: #2779BF;
+                }
+                a{
+                    color: white;
+                    text-decoration: none;
+                }
+        }
 }
-
-.navBar li {
-    display: inline-block;
-    padding: 10px 20px;
-}
-
-.navBar li:hover {
-    background-color: #2779BF;
-}
-
-.navBar li a {
-    color: white;
-    text-decoration: none;
-}
-
 .textoClasico {
     text-align: center;
     font-weight: bolder;
 }
-
 .textoDorado {
     color: goldenrod;
     font-weight: bolder;
     font-size: 15px;
 }
-
 .textoGrande {
     font-size: 35px;
     font-weight: bold;
 }
-
 .textoSilver {
     margin: 10px;
     color: #9d9d9d;
     font-size: 15px;
 }
-
 .textoSilver--align {
     text-align: justify;
 }
-
 .textoMediano {
     font-size: 25px;
     font-weight: bold;
 }
-
 .pie {
     grid-area: pie;
 }
-
 .footer {
     /* margin: 15px;
     padding: 15px; */
@@ -79,9 +68,8 @@
     width: 100%;
     height: 60px;
     /* Height of the footer */
-    background: #053023;
+    background: rgb(5, 48, 35);
 }
-
 .form1 {
     display: flexbox;
     flex-direction: column;
