--- a/css/styles.css
+++ b/css/styles.css
@@ -1,89 +1,119 @@
 .imgBg {
-    min-height: 100%;
-    min-width: 1920px;
-    z-index: -1;
-    width: 100%;
-    height: auto;
-    position: fixed;
-    top: 0;
-    left: 0;
-    pointer-events: none;
-    opacity: 0.7;
-}
+  min-height: 100%;
+  min-width: 1920px;
+  z-index: -1;
+  width: 100%;
+  height: auto;
+  position: fixed;
+  top: 0;
+  left: 0;
+  pointer-events: none;
+  opacity: 0.7; }
 
 .navBar {
-    background-color: #062521;
-    opacity: 0.8;
-    text-align: center;
-    text-decoration: none;
-    font-size: 15px;
-    top: 0;
-    width: 100%;
-}
-
-.navBar li {
+  background-color: #062521;
+  opacity: 0.8;
+  text-align: center;
+  text-decoration: none;
+  font-size: 15px;
+  top: 0;
+  width: 100%; }
+  .navBar li {
     display: inline-block;
-    padding: 10px 20px;
-}
-
-.navBar li:hover {
-    background-color: #2779BF;
-}
-
-.navBar li a {
-    color: white;
-    text-decoration: none;
-}
+    padding: 10px 20px; }
+    .navBar li:hover {
+      background-color: #2779BF; }
+    .navBar li a {
+      color: white;
+      text-decoration: none; }
 
 .textoClasico {
-    text-align: center;
-    font-weight: bolder;
-}
+  text-align: center;
+  font-weight: bolder; }
 
 .textoDorado {
-    color: goldenrod;
-    font-weight: bolder;
-    font-size: 15px;
-}
+  color: goldenrod;
+  font-weight: bolder;
+  font-size: 15px; }
 
 .textoGrande {
-    font-size: 35px;
-    font-weight: bold;
-}
+  font-size: 35px;
+  font-weight: bold; }
 
 .textoSilver {
-    margin: 10px;
-    color: #9d9d9d;
-    font-size: 15px;
-}
+  margin: 10px;
+  color: #9d9d9d;
+  font-size: 15px; }
 
 .textoSilver--align {
-    text-align: justify;
-}
+  text-align: justify; }
 
 .textoMediano {
-    font-size: 25px;
-    font-weight: bold;
-}
+  font-size: 25px;
+  font-weight: bold; }
 
 .pie {
-    grid-area: pie;
-}
+  grid-area: pie; }
 
 .footer {
-    /* margin: 15px;
+  /* margin: 15px;
     padding: 15px; */
-    text-align: center;
-    opacity: 0.8;
-    margin-top: auto;
-    width: 100%;
-    height: 60px;
-    /* Height of the footer */
-    background: #053023;
-}
+  text-align: center;
+  opacity: 0.8;
+  margin-top: auto;
+  width: 100%;
+  height: 60px;
+  /* Height of the footer */
+  background: #053023; }
 
 .form1 {
-    display: flexbox;
-    flex-direction: column;
-    margin: 15px 0px 0px 0px;
-}
+  display: flexbox;
+  flex-direction: column;
+  margin: 15px 0px 0px 0px; }
+
+.divModel {
+  margin: 15px;
+  padding: 15px; }
+
+.padreContacto {
+  display: grid;
+  grid-template-areas: "navegacion navegacion navegacion" "titulo titulo titulo" "formu formu formu" "formu formu formu" "formu formu formu" "pie pie pie";
+  grid-template-columns: repeat(1fr);
+  grid-template-rows: repeat(1fr); }
+
+.titulo {
+  grid-area: titulo; }
+
+.formulario {
+  grid-area: formu; }
+
+.navegacion {
+  grid-area: navegacion; }
+
+.textoSilverContacto, .textoSilverContacto1 {
+  color: #9d9d9d;
+  font-size: 15px;
+  font-weight: bolder; }
+
+.textoSilverContacto1 {
+  font-size: 13px; }
+
+.divModelForm {
+  padding: 10px 10px 10px 0px; }
+
+.divModelFormBtn {
+  padding: 0px 0px 10px 0px; }
+
+.btn--enviar {
+  background-color: #229954; }
+
+.btn--limpiar {
+  background-color: #1F618D; }
+
+.field1 {
+  width: 400px;
+  height: auto;
+  display: block;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin: auto; }
