--- a/scss/prueba.scss
+++ b/scss/prueba.scss
@@ -1,2 +1,5 @@
 @import "pagesscss/lore";
 @import "pagesscss/contacto";
+@import "pagesscss/index";
+@import "pagesscss/items";
+@import "pagesscss/fotos";
