--- a/scss/pagesscss/_lore.scss
+++ b/scss/pagesscss/_lore.scss
@@ -11,7 +11,7 @@
     opacity: 0.7;
 }
 
-.navBar{
+.navBar {
     background-color: #062521;
     opacity: 1;
     text-align: left;
@@ -19,58 +19,128 @@
     font-size: 15px;
     top: 0;
     min-width: 100%;
-        li{
-            display: inline-block;
-            padding: 10px 20px;
-                &:hover{
-                    background-color: #2779BF;
-                }
-                a{
-                    color: white;
-                    text-decoration: none;
-                }
+
+    li {
+        display: inline-block;
+        padding: 10px 20px;
+
+        &:hover {
+            background-color: #2779BF;
         }
+
+        a {
+            color: white;
+            text-decoration: none;
+        }
+    }
 }
+
 .textoClasico {
     text-align: center;
     font-weight: bolder;
 }
+
 .textoDorado {
     color: goldenrod;
     font-weight: bolder;
     font-size: 15px;
 }
+
 .textoGrande {
     font-size: 35px;
     font-weight: bold;
 }
+
 .textoSilver {
     margin: 10px;
     color: #9d9d9d;
     font-size: 15px;
 }
+
 .textoSilver--align {
     text-align: justify;
 }
+
 .textoMediano {
     font-size: 25px;
     font-weight: bold;
 }
+
 .pie {
     grid-area: pie;
 }
+
 .footer {
     text-align: center;
     opacity: 0.8;
-    margin-top: auto;
+    margin-top: 20px;
     width: 100%;
     height: 60px;
     background: rgb(5, 48, 35);
+    bottom: 0;
+    position: absolute;
+    clear: both;
 }
+
 .form1 {
     display: flexbox;
     flex-direction: column;
     margin: 15px 0px 0px 0px;
 }
 
-
+.bodLore {
+    width: 100%;
+    height: 100%;
+    background: #000;
+  }
+  
+  .fade {
+    position: relative;
+    width: 100%;
+    min-height: 60vh;
+    top: -25px;
+    background-image: linear-gradient(0deg, transparent, black 75%);
+    z-index: 1;
+  }
+  
+  .elden-ring {
+    display: flex;
+    justify-content: center;
+    position: relative;
+    height: 500px;
+    color: #feda4a;
+    font-size: 500%;
+    font-weight: 600;
+    letter-spacing: 6px;
+    line-height: 150%;
+    perspective: 400px;
+    text-align: justify;
+  }
+  
+  .crawl {
+    position: relative;
+    top: 9999px;
+    transform-origin: 50% 100%;
+    animation: crawl 60s linear;
+  }
+  
+  .crawl > .title {
+    font-size: 90%;
+    text-align: center;
+  }
+  
+  .crawl > .title h1 {
+    margin: 0 0 100px;
+    text-transform: uppercase;
+  }
+  
+  @keyframes crawl {
+    0% {
+      top: 0;
+      transform: rotateX(20deg)  translateZ(0);
+    }
+    100% { 
+      top: -6000px;
+      transform: rotateX(25deg) translateZ(-2500px);
+    }
+  }
